syntax = "proto3";

package Protocols.Item;

// 物品数据结构
message ItemData {
    string item_id = 1;          // 物品ID
    string item_name = 2;        // 物品名称
    string item_description = 3; // 物品描述
    int32 item_type = 4;         // 物品类型
    int32 quantity = 5;          // 数量
}
