syntax = "proto3";

package Protocols;

// 网络消息结构
message NetworkMessage {
    string message_id = 1;     // 消息ID
    string sender_id = 2;       // 发送者ID
    string receiver_id = 3;     // 接收者ID
    string content = 4;         // 消息内容
}

// 结果结构
message Result {
    bool success = 1;           // 操作是否成功
    string message = 2;         // 返回信息
}

// 错误结构
message Error {
    int32 error_code = 1;       // 错误代码
    string error_message = 2;    // 错误信息
}
